--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,8 @@
 			"name": "Extension",
 			"type": "extensionHost",
 			"request": "launch",
-			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}"
-			]
+			"args": ["--extensionDevelopmentPath=${workspaceFolder}"],
+			"preLaunchTask": "${defaultBuildTask}"
 		}
 	]
 }
