--- a/config.json
+++ b/config.json
@@ -1,4 +1,12 @@
 {
+	"autoClosingPairs": [
+		["[", "]"],
+		["(", ")"]
+	],
+	"brackets": [
+		["[", "]"],
+		["(", ")"]
+	],
 	"comments": {
 		"lineComment": "#"
 	}
