--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"description": "Language features for .ignore files",
 	"icon": "assets/dot-ignore.png",
 	"main": "./dist/extension.js",
-	"version": "2.0.0",
+	"version": "2.0.1",
 	"publisher": "Breadnaught",
 	"engines": {
-		"vscode": "^1.61.0"
+		"vscode": "^1.64.0"
 	},
 	"scripts": {
 		"build": "rimraf dist && tsc -b",
@@ -121,14 +121,14 @@
 		]
 	},
 	"devDependencies": {
-		"@types/node": "^16.11.1",
-		"@types/vscode": "^1.61.0",
-		"prettier": "^2.4.1",
-		"tslib": "^2.3.1",
-		"typescript": "^4.4.4"
+		"@types/node": "^17.0.21",
+		"@types/vscode": "^1.64.0",
+		"prettier": "^2.5.1",
+		"typescript": "^4.5.5"
 	},
 	"dependencies": {
-		"@octokit/request": "^5.6.2",
-		"ts-dedent": "^2.2.0"
+		"@octokit/request": "^5.6.3",
+		"ts-dedent": "^2.2.0",
+		"tslib": "^2.3.1"
 	}
 }
