--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,19 @@
 {
 	"compilerOptions": {
 		"importHelpers": true,
-		"lib": ["ESNext"],
+		"lib": [
+			"ESNext"
+		],
+		"target": "ESNext",
 		"module": "CommonJS",
+		"moduleResolution": "node",
 		"outDir": "dist",
 		"removeComments": false,
-		"target": "ESNext",
 		"strict": true,
 		"esModuleInterop": true,
-		"moduleResolution": "node",
-		"noImplicitOverride": true,
 		"skipLibCheck": true
 	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules"]
+	"include": [
+		"src/**/*"
+	],
 }
