--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
 	"version": "2.1.0",
 	"publisher": "Breadnaught",
 	"license": "MIT",
+	"packageManager": "pnpm@9.9.0",
 	"engines": {
 		"vscode": "^1.68.0"
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run build",
+		"vscode:prepublish": "pnpm build",
 		"build": "rimraf dist && tsc -b",
 		"watch": "tsc --watch",
 		"lint": "prettier --write \"src/**\" && eslint \"src/**\" --fix"
@@ -33,11 +34,21 @@
 		"directory",
 		"glob"
 	],
-	"activationEvents": [
-		"onLanguage:ignore",
-		"onCommand:ignore.newFile",
-		"onCommand:ignore.ignorePath"
-	],
+	"dependencies": {
+		"@octokit/request": "^9.1.3",
+		"fast-glob": "^3.3.2",
+		"ts-dedent": "^2.2.0",
+		"tslib": "^2.7.0"
+	},
+	"devDependencies": {
+		"@antfu/eslint-config": "^3.6.2",
+		"@types/node": "^22.5.5",
+		"@types/vscode": "^1.93.0",
+		"eslint": "^9.10.0",
+		"eslint-config-prettier": "^9.1.0",
+		"prettier": "^3.3.3",
+		"typescript": "^5.6.2"
+	},
 	"contributes": {
 		"languages": [
 			{
@@ -152,21 +163,5 @@
 				"title": "Ignore: New File"
 			}
 		]
-	},
-	"dependencies": {
-		"@octokit/request": "^6.2.0",
-		"fast-glob": "^3.2.11",
-		"ts-dedent": "^2.2.0",
-		"tslib": "^2.4.0"
-	},
-	"devDependencies": {
-		"@types/node": "^18.0.4",
-		"@types/vscode": "^1.69.0",
-		"@typescript-eslint/eslint-plugin": "^5.30.6",
-		"@typescript-eslint/parser": "^5.30.6",
-		"eslint": "^8.19.0",
-		"eslint-config-prettier": "^8.5.0",
-		"prettier": "^2.7.1",
-		"typescript": "^4.7.4"
 	}
 }
