--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
 	"license": "MIT",
 	"packageManager": "pnpm@9.9.0",
 	"engines": {
-		"vscode": "^1.68.0"
+		"vscode": "^1.90.0"
 	},
 	"scripts": {
 		"vscode:prepublish": "pnpm build",
-		"build": "rimraf dist && tsc -b",
-		"watch": "tsc --watch",
+		"build": "tsup",
+		"watch": "tsup --watch",
 		"lint": "prettier --write \"src/**\" && eslint \"src/**\" --fix"
 	},
 	"repository": {
@@ -37,8 +37,7 @@
 	"dependencies": {
 		"@octokit/request": "^9.1.3",
 		"fast-glob": "^3.3.2",
-		"ts-dedent": "^2.2.0",
-		"tslib": "^2.7.0"
+		"ts-dedent": "^2.2.0"
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^3.6.2",
@@ -47,6 +46,7 @@
 		"eslint": "^9.10.0",
 		"eslint-config-prettier": "^9.1.0",
 		"prettier": "^3.3.3",
+		"tsup": "^8.3.0",
 		"typescript": "^5.6.2"
 	},
 	"contributes": {
