feat: add wp-cli and terraform ignore files

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 					".cfignore",
 					".chefignore",
 					".deployignore",
+					".distignore",
 					".dockerignore",
 					".ebignore",
 					".eleventyignore",
@@ -88,6 +89,7 @@
 					".stylintignore",
 					".swagger-codegen-ignore",
 					".stignore",
+					".terraformignore",
 					".tfignore",
 					".tokeignore",
 					".upignore",
