--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
 	],
 	"dependencies": {
 		"@octokit/request": "^9.1.3",
-		"fast-glob": "^3.3.2",
-		"ts-dedent": "^2.2.0"
+		"fast-glob": "^3.3.2"
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^3.6.2",
