--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
 	"description": "Language features for `.*ignore` files",
 	"icon": "./assets/dot-ignore.png",
 	"main": "./dist/extension.js",
-	"version": "2.1.0",
+	"version": "3.0.0",
 	"publisher": "Breadnaught",
 	"license": "MIT",
+	"packageManager": "pnpm@9.9.0",
 	"engines": {
-		"vscode": "^1.68.0"
+		"vscode": "^1.90.0"
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run build",
-		"build": "rimraf dist && tsc -b",
-		"watch": "tsc --watch",
+		"vscode:prepublish": "pnpm build",
+		"package": "vsce package --no-dependencies",
+		"build": "tsup",
+		"watch": "tsup --watch",
 		"lint": "prettier --write \"src/**\" && eslint \"src/**\" --fix"
 	},
 	"repository": {
@@ -33,11 +35,21 @@
 		"directory",
 		"glob"
 	],
-	"activationEvents": [
-		"onLanguage:ignore",
-		"onCommand:ignore.newFile",
-		"onCommand:ignore.ignorePath"
-	],
+	"dependencies": {
+		"@octokit/request": "^9.1.3",
+		"fast-glob": "^3.3.2"
+	},
+	"devDependencies": {
+		"@antfu/eslint-config": "^3.6.2",
+		"@types/node": "^22.5.5",
+		"@types/vscode": "^1.90.0",
+		"@vscode/vsce": "^3.2.1",
+		"eslint": "^9.10.0",
+		"eslint-config-prettier": "^9.1.0",
+		"prettier": "^3.3.3",
+		"tsup": "^8.3.0",
+		"typescript": "^5.6.2"
+	},
 	"contributes": {
 		"languages": [
 			{
@@ -53,6 +65,7 @@
 					".cfignore",
 					".chefignore",
 					".deployignore",
+					".distignore",
 					".dockerignore",
 					".ebignore",
 					".eleventyignore",
@@ -77,6 +90,7 @@
 					".stylintignore",
 					".swagger-codegen-ignore",
 					".stignore",
+					".terraformignore",
 					".tfignore",
 					".tokeignore",
 					".upignore",
@@ -97,6 +111,41 @@
 		"configuration": {
 			"title": "Ignore",
 			"properties": {
+				"ignore.codeLensMatches": {
+					"type": "boolean",
+					"default": true,
+					"description": "Show the number of matches for each pattern as a CodeLens."
+				},
+				"ignore.lint.coveredPatterns": {
+					"type": "string",
+					"enum": [
+						"off",
+						"warn",
+						"error"
+					],
+					"default": "warn",
+					"description": "Disallow patterns that are already covered by other patterns."
+				},
+				"ignore.lint.duplicatePatterns": {
+					"type": "string",
+					"enum": [
+						"off",
+						"warn",
+						"error"
+					],
+					"default": "warn",
+					"description": "Disallow duplicate patterns."
+				},
+				"ignore.lint.unusedPatterns": {
+					"type": "string",
+					"enum": [
+						"off",
+						"warn",
+						"error"
+					],
+					"default": "off",
+					"description": "Disallow patterns that don't have any matches. This is `off` by default because most ignore templates include general patterns that won't always be used."
+				},
 				"ignore.newFileConflictBehavior": {
 					"type": "string",
 					"enum": [
@@ -110,7 +159,7 @@
 						"Always prompt what to do when an ignore file already exists."
 					],
 					"default": "prompt",
-					"description": "Choose the default behavior when attempting to create a new ignore file and an ignore file already exists."
+					"description": "Default behavior when attempting to create a new ignore file and an ignore file already exists."
 				},
 				"ignore.promptOnEmptyFile": {
 					"type": "boolean",
@@ -152,21 +201,5 @@
 				"title": "Ignore: New File"
 			}
 		]
-	},
-	"dependencies": {
-		"@octokit/request": "^6.2.0",
-		"fast-glob": "^3.2.11",
-		"ts-dedent": "^2.2.0",
-		"tslib": "^2.4.0"
-	},
-	"devDependencies": {
-		"@types/node": "^18.0.4",
-		"@types/vscode": "^1.69.0",
-		"@typescript-eslint/eslint-plugin": "^5.30.6",
-		"@typescript-eslint/parser": "^5.30.6",
-		"eslint": "^8.19.0",
-		"eslint-config-prettier": "^8.5.0",
-		"prettier": "^2.7.1",
-		"typescript": "^4.7.4"
 	}
 }
